# enterprise-fraud-detection

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BACKEND_PHASE_1_COMPLETE_STATUS.md  CHANGELOG.md  CI_FIXES_SUMMARY.md  CONTRIBUTING.md  CUSTOMER_MODULE_COMPLETE.md  DEVELOPER_DEFINITION_OF_DONE.md  ENGINEERING_VERIFICATION_REPORT.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  ML_DESIGN_COMPLETE.md  ML_DESIGN_SPECIFICATION.md  ML_PHASE_1_1_COMPLETE.md  ML_PHASE_1_1_PROGRESS.md  ML_PHASE_1_1_STATUS.md  ML_PHASE_1_3_COMPLETE.md  ML_PHASE_1_PLAN.md  ML_PHASE_2_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_1_DELIVERY.md  PHASE_1_REPOSITORIES_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_DELIVERY_REPORT.md  PHASE_2_STATUS.md  PHASE_2_SUMMARY.md  PHASE_3B_PROGRESS.md  PHASE_3B_SUMMARY.md  PHASE_3_COMPLETE_SUMMARY.md  PHASE_3_PROGRESS.md  PHASE_3_STATUS.md  PHASE_3_SUMMARY.md  PRODUCTION_READINESS_ARCHITECTURE_REPORT.md  PRODUCTION_READINESS_CODE_QUALITY_REPORT.md  PRODUCTION_READINESS_DOCUMENTATION_REPORT.md  PRODUCTION_READINESS_EXECUTIVE_SUMMARY.md  PRODUCTION_READINESS_MLOPS_REPORT.md  (+29 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  audit_application.py  docker-compose.yml  fix_b904_errors.py  fix_b904_simple.py  fix_remaining_b904.py  fix_repository_imports.py  pytest.ini  requirements-dev.txt  requirements.txt  verify_openapi.py
backend/scripts/: seed_data.py  verify_phase2.py  verify_setup.py
backend/src/: __init__.py
backend/src/application/: __init__.py
backend/src/config/: __init__.py  logging_config.py  settings.py
backend/src/domain/: __init__.py
backend/src/infrastructure/: __init__.py
backend/src/presentation/: __init__.py  main.py
backend/src/utils/: __init__.py  constants.py  decorators.py  validators.py
backend/tests/: conftest.py  test_repository_interfaces.py
backend/tests/e2e/: __init__.py
backend/tests/integration/: __init__.py  test_alert_repository.py  test_audit_repository.py  test_customer_repository.py  test_merchant_repository.py  test_model_repository.py  test_user_repository.py  (+2 more)
config/training/: isolation_forest_config.yaml  pipeline_config.yaml  xgboost_config.yaml
docs/: APPLICATION_FREEZE_VERIFICATION_REPORT.md  APPLICATION_LAYER_PROGRESS.md  APPLICATION_LAYER_STATUS.md  DATASET_ADAPTER_GUIDE.md  FOUNDATION_ARCHITECTURE.md  METADATA_SYSTEM.md  PHASE_2A_AUTH_PROGRESS.md  PIPELINE_FRAMEWORK.md  REPOSITORY_LAYER_FROZEN.md  REPRODUCIBILITY_GUIDE.md  VERSIONING_GUIDE.md
docs/application/: APPLICATION_LAYER_STATUS.md  CANONICAL_SERVICE_CONTRACT.md  CONTRACT_STABILIZATION_REPORT.md  DEFERRED_USE_CASES.md  SERVICE_COMPLETION_REPORT.md  SPRINT_COMPLETION_REPORT.md  USE_CASE_ENABLEMENT_REPORT.md  USE_CASE_FIXES_REQUIRED.md
docs/training/: EXPERIMENT_GUIDE.md  TRAINING_GUIDE.md
ml/: __init__.py
ml/data/: __init__.py  pipeline_stages.py
ml/features/: __init__.py  pipeline.py  registry.py  store.py
ml/pipeline/: __init__.py  executor.py  pipeline.py  registry.py  stage.py
ml/reports/: __init__.py  base.py  execution_report.py  metadata_report.py  pipeline_report.py  quality_report.py  validation_report.py
ml/testing/: __init__.py  assertions.py  fixtures.py
ml/training/: __init__.py  base.py  evaluation.py  optimization.py  pipeline.py  registry.py  tracking.py
ml/utils/: config.py  file_manager.py  logging_config.py  metadata.py  reproducibility.py
ml/validation/: __init__.py  schemas.py  validators.py
scripts/: train_models.py
(+152 files in other folders)
